[tool.poetry]
name = "prometheus-network-exporter"
version = "1.2.5"
description = "A Prometheus Network Exporter which connects via netconf ssh to the devices"
authors = ["Cellebyte <marcel.fest@live.de>"]
license = "MIT"

[tool.poetry.dependencies]
# pinned due to telnetlib being removed
python = "^3.12"
junos-eznc = "2.7.3"
PyYAML = "*"
tornado = "*"
prometheus_client = "*"
fqdn = "*"
voluptuous = "*"
paramiko = "*"
cached-property = "*"

[poetry.group.dev.dependencies]
flake8 = "*"
PySocks = "*"
pyinstaller = "*"
mypy = "*"
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
